# just-play-piano

./: .gitignore  MOBILE_PLAN.md  Package.swift  README.md  build.sh  deploy-android.sh  deploy-appstore.sh  deploy-ios.sh  project.yml
AirshipPiano.xcodeproj/: project.pbxproj
Resources/: AppIcon.icns
Sources/PianoApp/: AudioEngine.swift  BluetoothMIDIView.swift  MIDIManager.swift  PianoApp.swift  SoundFontManager.swift
Sources/PianoApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
android/: deploy-playstore.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  synth_engine.cpp
android/app/src/main/java/com/windupairships/airshippiano/: AirshipPianoApp.kt  MainActivity.kt
android/app/src/main/java/com/windupairships/airshippiano/audio/: AudioEngine.kt  SynthEngine.kt
android/app/src/main/java/com/windupairships/airshippiano/midi/: MidiDeviceInfo.kt  MidiManager.kt
android/app/src/main/java/com/windupairships/airshippiano/notedetection/: NoteDisplay.kt
android/app/src/main/java/com/windupairships/airshippiano/soundfont/: SoundFontManager.kt
android/app/src/main/java/com/windupairships/airshippiano/ui/: DeviceRow.kt  DownloadScreen.kt  ErrorScreen.kt  MainScreen.kt  PianoScreen.kt  PianoViewModel.kt
android/app/src/main/java/com/windupairships/airshippiano/ui/theme/: Theme.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
